--- a/prototype/index.html
+++ b/prototype/index.html
@@ -6,5 +6,24 @@
   <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
+  <div id="root">
+    <div id="header">
+      <div id=toolBox>
+        <button><<</button>
+        <button><</button>
+        <button>></button>
+        <button>>></button>
+        <button>Open</button>
+      </div>
+      <div id="fileNamesBox">
+        <p>img01.jpg</p>
+        <p>img02.jpg</p>
+      </div>
+    </div>
+    <div id="contents">
+      <div id="imageView">
+      </div>
+    </div>
+  </div>
 </body>
 </html>
