Add fileNameBox style

--- a/prototype/index.html
+++ b/prototype/index.html
@@ -15,9 +15,9 @@
         <button>>></button>
         <button>Open</button>
       </div>
-      <div id="fileNamesBox">
-        <p>img01.jpg</p>
-        <p>img02.jpg</p>
+      <div class="fileNamesBox">
+        <p class="fileName">img01.jpg</p>
+        <p class="fileName">image02.jpg</p>
       </div>
     </div>
     <div id="contents">
