--- a/prototype/index.html
+++ b/prototype/index.html
@@ -6,22 +6,24 @@
   <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
-  <div id="root">
-    <div id="header">
-      <div id=toolBox>
-        <button><<</button>
-        <button><</button>
-        <button>></button>
-        <button>>></button>
-        <button>Open</button>
+  <div id="root" class="root">
+    <header>
+      <div class=toolBox>
+        <button class="toolButton" id="doubleLeftButton"><<</button>
+        <button class="toolButton" id="singleLeftButton"><</button>
+        <button class="toolButton" id="singleRightButton">></button>
+        <button class="toolButton" id="doubleRightButton">>></button>
+        <label><input class="toolRadio" type="radio" />Left</label>
+        <label><input class="toolRadio" type="radio" />Right</label>
+        <button class="toolButton fileOpenButton">Open</button>
       </div>
       <div class="fileNamesBox">
         <p class="fileName">img01.jpg</p>
         <p class="fileName">image02.jpg</p>
       </div>
-    </div>
-    <div id="contents">
-      <div id="imageView">
+    </header>
+    <div class="contents">
+      <div class="imageView">
       </div>
     </div>
   </div>
