Add prototype script
Confirmation for Mouseover and Mouseout event.

--- a/prototype/index.html
+++ b/prototype/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>prototype</title>
   <link rel="stylesheet" href="css/index.css">
+  <script src="js/index.js"></script>
 </head>
 <body>
   <div id="root" class="root">
@@ -23,7 +24,7 @@
       </div>
     </header>
     <div class="contents">
-      <div class="imageView">
+      <div class="imageView" id="imageView">
       </div>
     </div>
   </div>
