Modify prototype layout

--- a/prototype/index.html
+++ b/prototype/index.html
@@ -24,8 +24,7 @@
       </div>
     </header>
     <div class="contents">
-      <div class="imageView" id="imageView">
-      </div>
+      <img class="imageView" id="imageView">
     </div>
   </div>
 </body>
