Modify prototype layout

--- a/prototype/index.html
+++ b/prototype/index.html
@@ -15,8 +15,10 @@
           <button class="toolButton" id="singleLeftButton"><</button>
           <button class="toolButton" id="singleRightButton">></button>
           <button class="toolButton" id="doubleRightButton">>></button>
-          <label><input class="toolRadio" type="radio" />Left</label>
-          <label><input class="toolRadio" type="radio" />Right</label>
+          <div>
+            <label><input class="toolRadio" type="radio" />Left</label>
+            <label><input class="toolRadio" type="radio" />Right</label>
+          </div>
           <button class="toolButton fileOpenButton">Open</button>
         </div>
       </div>
