--- a/prototype/index.html
+++ b/prototype/index.html
@@ -11,10 +11,12 @@
     <div class="app">
       <div class="header">
         <div class=toolBox>
-          <button class="toolButton" id="doubleLeftButton"><<</button>
-          <button class="toolButton" id="singleLeftButton"><</button>
-          <button class="toolButton" id="singleRightButton">></button>
-          <button class="toolButton" id="doubleRightButton">>></button>
+          <div>
+            <button class="toolButton" id="doubleLeftButton"><<</button>
+            <button class="toolButton" id="singleLeftButton"><</button>
+            <button class="toolButton" id="singleRightButton">></button>
+            <button class="toolButton" id="doubleRightButton">>></button>
+          </div>
           <div>
             <label><input class="toolRadio" type="radio" />Left</label>
             <label><input class="toolRadio" type="radio" />Right</label>
