Add entry point

--- a/public/index.html
+++ b/public/index.html
@@ -2,9 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title></title>
+  <link rel="stylesheet" href="../public/css/index.css">
+  <title>Spread image viewer</title>
 </head>
 <body>
-  <h1>hello!</h1>
+  <div id="root"></div>
+  <script src="../dest/index.js"></script>
 </body>
 </html>
