Clean directory structure

--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <link rel="stylesheet" href="../public/css/index.css">
+  <link rel="stylesheet" href="css/index.css">
   <title>Spread image viewer</title>
   <!--
   <script>
@@ -27,7 +27,7 @@
 </head>
 <body>
   <div id="root"></div>
-  <script src="../dest/index.js"></script>
+  <script src="index.js"></script>
   <!-- <img id="logo"> -->
 </body>
 </html>
